# wimt-bot

./: .gitignore  Cargo.toml  README.md
src/: api.rs  config.rs  io.rs  main.rs  structs.rs  tests.rs
