[package]
name = "wimt-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11.3", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "time"] }
reqwest = {version = "0.11.13", features = ["json"]}
serde = "1.0.151"
serde_json = "1.0.91"

hafas-rest = "0.1.3"
chrono = "0.4.23"
dotenv = "0.15.0"